:see_no_evil: Add build dir to .gitignore

--- a/now.json
+++ b/now.json
@@ -2,16 +2,6 @@
   "env": {
     "FINDING_ANAND_ACCESS_TOKEN": "@finding_anand_access_token"
   },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/ok",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Methods": "OPTIONS",
-        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
-      },
-      "methods": ["OPTIONS"]
-    }
-  ]
+  "builds": [{ "src": "./build/**", "use": "@now/static" }],
+  "routes": [{ "src": "/(.*)", "dest": "build/$1" }]
 }
