--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "@now/node": "^1.2.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/react-router-dom": "^5.1.3",
     "concurrently": "^5.1.0"
   },
   "dependencies": {
     "@octokit/rest": "^16.43.1",
-    "bcrypt": "^3.0.8",
-    "jsonwebtoken": "^8.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -29,8 +28,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bcrypt": "^3.0.8",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
   },
