--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/showdown": "^1.9.3",
     "concurrently": "^5.1.0"
   },
   "dependencies": {
@@ -32,8 +33,10 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-mde": "^8.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "showdown": "^1.9.1",
     "typescript": "~3.7.2"
   },
   "eslintConfig": {
