--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@now/node": "^1.2.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.7",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/showdown": "^1.9.3",
     "concurrently": "^5.1.0"
@@ -34,8 +35,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-mde": "^8.0.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
     "showdown": "^1.9.1",
     "typescript": "~3.7.2"
   },
