:heavy_plus_sign: Add contenteditable

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^3.0.8",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
+    "react-contenteditable": "^3.3.3",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
