--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Anand Chowdhary <mail@anandchowdhary.com>",
   "license": "MIT",
   "scripts": {
-    "local": "concurrently 'npm run start' 'now dev'",
+    "local": "now dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -18,8 +18,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
-    "@types/showdown": "^1.9.3",
-    "concurrently": "^5.1.0"
+    "@types/showdown": "^1.9.3"
   },
   "dependencies": {
     "@octokit/rest": "^16.43.1",
