--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@now/node": "^1.2.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/js-base64": "^2.3.1",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
@@ -31,6 +32,7 @@
     "@types/react-dom": "^16.9.0",
     "antd": "^3.26.11",
     "bcrypt": "^3.0.8",
+    "js-base64": "^2.5.2",
     "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-contenteditable": "^3.3.3",
